kubernetes/apps/qbittorrent/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`qbt.sobrinho.pt`)
      kind: Rule
      services:
        - name: qbittorrent
          port: main
  tls:
    secretName: qbittorrent-cert
